syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.william";
option java_outer_classname = "pixGRPC";
option objc_class_prefix = "HLW";

package br.com.zup.william;

service RegistraKeyManagerPixGRPCService {
  rpc regista (RegistraChavePixRequest) returns (RegistraChavePixResponse){}
}

service RemoveKeyManagerPixGRPCService{
  rpc remove (RemoveChavePixRequest) returns (RemoveChavePixResponse){}
}

message RemoveChavePixRequest{
  string pixId = 1;
  string idDoCliente = 2;
}

message RemoveChavePixResponse{
  string mensagem = 1;
}

message  RegistraChavePixRequest{
  string idDoCliente = 1;
  TipoDeChave tipoDeChave = 2;
  string  valorDaChave = 3;
  TipoDeConta tipoDeConta = 4;
}
enum TipoDeChave{
  TIPO_DE_CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  TELEFONE_CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}
enum TipoDeConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}
message  RegistraChavePixResponse{
  string idDoCliente = 1;
  string pixId = 2;
}

message ProjetoKeyManagerPixGRPCRequest {
  string name = 1;
}

message ProjetoKeyManagerPixGRPCReply {
  string message = 1;
}